gtk2-engines-oxygen (1.2.4-1) UNRELEASED; urgency=low

  * New upstream release.
    - Fix codeblocks crash. (Closes: #670830)

  [ Kai Wasserbäch ]
  * debian/control: Change B-D from libdbus-glib-1-dev to libglib2.0-dev
    >= 2.26.0, preferred by upstream's build system.

 -- Fathi Boudra <fabo@debian.org>  Tue, 22 May 2012 10:08:56 +0300

gtk2-engines-oxygen (1.2.2-1) unstable; urgency=low

  * New upstream release.
  * debian/patches/dont-build-demos.patch: Refreshed.
  * debian/control: Bumped Standards-Version, no further changes needed.
  * debian/copyright: Updated.

 -- Kai Wasserbäch <curan@debian.org>  Wed, 14 Mar 2012 19:11:12 +0100

gtk2-engines-oxygen (1.2.0-1) unstable; urgency=low

  * New upstream release.
  * debian/watch: Updated (upstream renamed the tarball and changed the path).
  * debian/control: Bumped B-D on debhelper to >= 9.
  * debian/source.lintian-overrides: Removed, no longer needed.

 -- Kai Wasserbäch <curan@debian.org>  Sat, 21 Jan 2012 20:21:58 +0100

gtk2-engines-oxygen (1.1.6-1) unstable; urgency=low

  * New upstream release.

 -- Fathi Boudra <fabo@debian.org>  Fri, 30 Dec 2011 12:24:19 +0200

gtk2-engines-oxygen (1.1.5-1) unstable; urgency=low

  * New upstream release.

 -- Kai Wasserbäch <curan@debian.org>  Thu, 24 Nov 2011 10:37:07 +0100

gtk2-engines-oxygen (1.1.4-1) unstable; urgency=low

  * New upstream release.
  * debian/patches/dont-build-demos.patch: Refreshed.
  * Move to debhelper compat level 9:
    - debian/rules: Remove dpkg-architecture invocation, dh v9 does it for us.
    - debian/control: Bump the B-D on debhelper and correct the B-D on cmake
      for multiarch.
    - debian/source.lintian-overrides: Added (temp. only).

 -- Kai Wasserbäch <curan@debian.org>  Tue, 18 Oct 2011 21:09:25 +0200

gtk2-engines-oxygen (1.1.3-1) unstable; urgency=low

  * New upstream release.
  * debian/control: Updated Vcs-* entries to point to anonscm.d.o.
  * Prepare for multiarch:
    - debian/control: