@@ -1,15 +1,17 @@
 #!/usr/bin/make -f
 
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
+export DEB_LDFLAGS_MAINT_APPEND := -Wl,--no-undefined -Wl,--as-needed
+
 %:
 	dh $@ --parallel
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		-DDEBIAN_NO_DEMOS=1 \
-		-DCMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT=yes \
-		-DCMAKE_SHARED_LINKER_FLAGS="-Wl,--no-undefined -Wl,--as-needed" \
-		-DCMAKE_MODULE_LINKER_FLAGS="-Wl,--no-undefined -Wl,--as-needed" \
-		-DCMAKE_EXE_LINKER_FLAGS="-Wl,--no-undefined -Wl,--as-needed"
+		-DCMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT=yes
 
 override_dh_makeshlibs:
 	dh_makeshlibs -X/usr/lib/$(DEB_HOST_MULTIARCH)/gtk-2.0
